--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,18 @@ spring.application.name=shortify
 server.port=9090
 
 #database
-spring.h2.console.enabled = true
-spring.datasource.url=jdbc:h2:mem:testdb2
+# spring.h2.console.enabled = false
+
+
+# spring.datasource.url=jdbc:h2:mem:testdb2
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot?useSSL=false
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#security
+# spring.security.user.name=admin
+# spring.security.user.password=admin
+
+jwt.secret=pX9z!rE2@bQ5$wT8#jU1^mL6&hK3*oP7dY4_nR0?gC9sV2
