--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,25 @@ spring.application.name=shortify
 
 server.port=9090
 
+# spring.profiles.active=dev
+
+
 #database
 # spring.h2.console.enabled = false
 
-
-# spring.datasource.url=jdbc:h2:mem:testdb2
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot?useSSL=false
+# spring.datasource.url=jdbc:postgresql://dpg-d4bdq27pm1nc73bnvvdg-a.oregon-postgres.render.com:5432/shortify_6a4r
+# spring.datasource.username=root
+# spring.datasource.password=4kmkw7WHze1gD6DfwA5ClKRcMMDFXHFU
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #security
+# #security
 # spring.security.user.name=admin
 # spring.security.user.password=admin
 
